# attnres

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  implementation_plan.md  paper.md  research_report.md  spec.md
.codex/skills/: _index.md  debugging.md  rust-burn-development.md  tensor-operations.md  testing.md
.github/workflows/: ci.yml  deploy-web-demo-pages.yml
benches/: attn_res_benchmark.rs
docs/: README.md
docs/reports/: kimi-attnres-real-train-eval-blocked-2026-03-23.json  kimi-attnres-real-train-eval-config-2026-03-23.json  kimi-public-baseline-smoke-2026-03-23.json
docs/rfcs/: 0001-real-model-milestone-scope.md  0002-kimi-baseline-compatibility.md  0003-sharded-checkpoint-import.md  0004-kimi-attnres-integration.md  0005-validation-and-benchmark-plan.md
docs/specs/: kimi-real-model-integration.md
docs/status/: kimi-real-model-status.md
examples/: compare_residuals.rs  demo_tui.rs  kimi_real_model_tools.rs  kimi_rfc_0005_external_pilot.rs  train_tiny.rs  visualize_weights.rs
fixtures/: attn_res_forward.json  block_state_tracking.json
src/: attention.rs  attn_res_op.rs  block_state.rs  config.rs  feed_forward.rs  layer.rs  lib.rs  model.rs  rms_norm.rs  serialization.rs  two_phase.rs  utils.rs
src/kimi/: attn_res_layer.rs  attn_res_model.rs  attn_res_state.rs  bootstrap.rs  cache.rs  config.rs  import.rs  index.rs  layer.rs  mlp.rs  mod.rs  model.rs  module_probe.rs  moe.rs  payload.rs  phase.rs  real_train_eval.rs  schedule.rs  slice_parity.rs
tests/: differential_tests.rs  integration_tests.rs  kimi_phase_a_tests.rs  kimi_rfc_0002_tests.rs  kimi_rfc_0003_tests.rs  kimi_rfc_0004_tests.rs  kimi_rfc_0005_bootstrap_tests.rs  kimi_rfc_0005_gate1_tests.rs  kimi_rfc_0005_gate2_attn_res_payload_tests.rs  kimi_rfc_0005_gate2_local_payload_tests.rs  kimi_rfc_0005_gate2_module_probe_tests.rs  kimi_rfc_0005_gate2_slice_parity_tests.rs  kimi_rfc_0005_gate6_training_stability_tests.rs  kimi_rfc_0005_real_train_eval_tests.rs  kimi_rfc_0005_tests.rs  property_tests.rs  unit_tests.rs
tests/support/: kimi_baseline_parity.rs  kimi_local_artifact.rs  kimi_slice_parity.rs  mod.rs
web-demo/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web-demo/crate/: Cargo.toml
web-demo/crate/src/: lib.rs  tensor.rs
web-demo/src/: canvas-utils.ts  main.ts  (+3 more)
(+6 files in other folders)
