[package]
name = "attnres"
version = "0.1.0"
edition = "2021"
description = "Attention Residuals (MoonshotAI/Kimi) implementation in Rust using burn"
license = "MIT"
repository = "https://github.com/AbdelStark/attnres"
readme = "README.md"
authors = ["Abdel <@AbdelStark>"]
keywords = ["deep-learning", "transformer", "attention", "pytorch", "burn"]
categories = ["science", "algorithms"]

[dependencies]
burn = { version = "0.20.1", features = ["ndarray", "autodiff", "train"] }
burn-ndarray = "0.20.1"
burn-wgpu = "0.20.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
ratatui = "0.29"
crossterm = "0.28"

[[bench]]
name = "attn_res_benchmark"
harness = false

[[example]]
name = "train_tiny"
path = "examples/train_tiny.rs"

[[example]]
name = "compare_residuals"
path = "examples/compare_residuals.rs"

[[example]]
name = "visualize_weights"
path = "examples/visualize_weights.rs"

[[example]]
name = "demo_tui"
path = "examples/demo_tui.rs"
