[package]
name = "attnres-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for the attnres web demo — faithful reimplementation of the core Attention Residuals algorithm"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = true
